  23 Apr 2015; Michael Weber <xmw@gentoo.org>
  raspberrypi-userland-bin-1_pre20150421.ebuild:
  Version bump

*raspberrypi-userland-bin-1_pre20150421 (23 Apr 2015)

  23 Apr 2015; Michael Weber <xmw@gentoo.org>
  +raspberrypi-userland-bin-1_pre20150421.ebuild:
  Version bump

  17 Jul 2013; Michael Weber <xmw@gentoo.org>
  raspberrypi-userland-bin-0_p20130711.ebuild,
  raspberrypi-userland-bin-1_pre20130715.ebuild:
  Fix install paths

  17 Jul 2013; Michael Weber <xmw@gentoo.org> files/04raspberrypi-userland-bin:
  Fix envd file

  17 Jul 2013; Michael Weber <xmw@gentoo.org> files/04raspberrypi-userland-bin,
  raspberrypi-userland-bin-0_p20130711.ebuild,
  raspberrypi-userland-bin-1_pre20130715.ebuild:
  install bins to /opt/bin

  17 Jul 2013; Michael Weber <xmw@gentoo.org>
  raspberrypi-userland-bin-0_p20130711.ebuild,
  raspberrypi-userland-bin-1_pre20130715.ebuild:
  Update ebuilds

*raspberrypi-userland-bin-0_p20130711 (17 Jul 2013)
*raspberrypi-userland-bin-1_pre20130715 (17 Jul 2013)

  17 Jul 2013; Michael Weber <xmw@gentoo.org> +files/04raspberrypi-userland-bin,
  +metadata.xml, +raspberrypi-userland-bin-0_p20130711.ebuild,
  +raspberrypi-userland-bin-1_pre20130715.ebuild:
  Initial import