@@ -1,3 +1,9 @@
+*raspberrypi-userland-bin-1_pre20150421-r1 (24 Apr 2015)
+
+  24 Apr 2015; Michael Weber <xmw@gentoo.org>
+  +raspberrypi-userland-bin-1_pre20150421-r1.ebuild:
+  Move installation to /usr, fix some include paths
+
   23 Apr 2015; Michael Weber <xmw@gentoo.org>
   raspberrypi-userland-bin-1_pre20150421.ebuild:
   Version bump
